2010-03-12  Michal Nazarewicz  <mina86/AT/mina86.com>

	* ChangeLog: + spelling corrected
	+ removed references to TODO file

2010-03-08  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mpd-show.c: + fixed bug with song formatting
	+ added %Y% pseudo tag which works as if it was not empty but is empty
	+ reverted to old non-highlighted colour

	* mpd-show.c: + small fixes in UTF-8 and wchar_t handling

2010-03-02  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mpd-show.c: + SIGWINCH signal (thus resizing) handling added
	+ some UTF-8 handling added

2010-01-03  Michal Nazarewicz  <mina86/AT/mina86.com>

	* getlyrics.pl: + incorporated lyrics retrieving code by Minio

	* splitlines.sh: + implemented *much* faster method of splitting

2009-12-12  Michal Nazarewicz  <mina86/AT/mina86.com>

	* installkernel: + --*config is now synonym of --config=*config

2009-12-12  Michal Nazarewicz  <mina86/AT/mina86.com>

	* Makefile: + fixed 'package' target

2009-11-25  Michal Nazarewicz  <mina86/AT/mina86.com>

	* mkpkg: + updated to create .txz packages

2009-08-31  Michal Nazarewicz  <mina86/AT/mina86.com>

	* installkernel: + fixed --jobs argument handling

2009-08-30  Michal Nazarewicz  <mina86/AT/mina86.com>

	* installkernel: + added --jobs option
	+ fixed incorrect .version being read when --out used
	+ fixed bug with --su when SHELL pointed to zsh

2009-06-24  Michal Nazarewicz  <mina86/AT/mina86.com>

	* lesspipe: + fixed bug where compressed files were not decompressed

2009-06-14  Michal Nazarewicz  <mina86/AT/mina86.com>

	* gz2bz: + added possibility to save uncompressed files in
	specified directory (think /tmp)
	+ changed meaning of -K (is now --keep-gz, was --keep-both)

2009-05-22  Michal Nazarewicz  <mina86/AT/mina86.com>

	* lesspipe: + added lzma and xz support

	* installkernel, installkernel.8: + added -o parameter

2009-05-09  Michal Nazarewicz  <mina86/AT/mina86.com>

	* quotes.txt: + converted to UTF-8
